[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/main.gd" type="Script" id=2]
[ext_resource path="res://scenes/RigidBody2D.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Oxygen_Tank.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/background.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/music.tscn" type="PackedScene" id=6]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 639.894, 2.68452, 0, 0, 0, 0, 644.001, 1.60966, 0, 0, 0, 0, 638.59, 960.647, 0, 0, 0, 0, 0.45459, 960.647, 0, 0, 0, 0, 3.62939, 4.33444, 0, 0, 0, 0, 639.894, 2.68452 )
}

[node name="main" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ 960.647 ],
"_edit_vertical_guides_": [  ]
}
peixeAbissal = ExtResource( 3 )

[node name="player" parent="." instance=ExtResource( 1 )]
position = Vector2( 340.053, 447.245 )
speed = 350

[node name="Oxygen_Tank" parent="." instance=ExtResource( 4 )]
position = Vector2( 340, 200 )
mode = 0

[node name="AbissalTimer" type="Timer" parent="."]

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 300, 100 )

[node name="abissalPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="abissalSpawnLocation" type="PathFollow2D" parent="abissalPath"]
position = Vector2( 1.57168, 624.156 )
rotation = -1.56748
offset = 1931.78

[node name="Node2D" parent="." instance=ExtResource( 5 )]
show_behind_parent = true

[node name="music" parent="." instance=ExtResource( 6 )]

[connection signal="timeout" from="AbissalTimer" to="." method="_on_AbissalTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
